@@ -7,7 +7,7 @@ use Test::Deep;
 use Test::DZil;
 use Path::Tiny;
 
-my $added_line;
+my @added_line;
 {
     package Dist::Zilla::Plugin::Naughty;
     use Moose;
@@ -22,8 +22,12 @@ my $added_line;
     {
         my $self = shift;
         my $distmeta = $self->zilla->distmeta;  # make the attribute fire
-        $self->add_file( Dist::Zilla::File::InMemory->new(
+        push @added_line, __LINE__; $self->add_file( Dist::Zilla::File::InMemory->new(
             name => 'normal_file_0',
+            content => 'oh hai!',
+        ));
+        push @added_line, __LINE__; $self->add_file( Dist::Zilla::File::InMemory->new(
+            name => 'normal_file_1',
             content => 'oh hai!',
         ));
     }
@@ -33,8 +37,11 @@ my $added_line;
 
         $self->zilla->prune_file(first_value { $_->name eq 'normal_file_0' } @{$self->zilla->files});
 
-        $added_line = __LINE__; $self->add_file( Dist::Zilla::File::InMemory->new(
-            name => 'rogue_file_1',
+        my $file1 = first_value { $_->name eq 'normal_file_1' } @{$self->zilla->files};
+        $file1->name('normal_file_1_moved');
+
+        push @added_line, __LINE__; $self->add_file( Dist::Zilla::File::InMemory->new(
+            name => 'rogue_file_2',
             content => 'naughty naughty!',
         ));
     }
@@ -61,7 +68,8 @@ my $added_line;
         bag(
             '[VerifyPhases] distmeta has already been calculated after file gathering phase!',
             "[VerifyPhases] file has been removed after munging phase: 'normal_file_0'",
-            "[VerifyPhases] file has been added after munging phase: 'rogue_file_1' (content set by Naughty (Dist::Zilla::Plugin::Naughty line $added_line))",
+            "[VerifyPhases] file has been renamed after munging phase: 'normal_file_1_moved' (originally 'normal_file_1', content set by Naughty (Dist::Zilla::Plugin::Naughty line $added_line[1]))",
+            "[VerifyPhases] file has been added after munging phase: 'rogue_file_2' (content set by Naughty (Dist::Zilla::Plugin::Naughty line $added_line[2]))",
         ),
         'warnings are logged about our naughty plugin',
     )
